# fclock

./: .gitignore  CMakeLists.txt  build.sh  clean.sh  deploy.sh  fclock.conf
build-arm/libconfuse-build-prefix/src/libconfuse-build-stamp/: libconfuse-build-gitclone-lastrun.txt
build-arm/libconfuse-build-prefix/tmp/: libconfuse-build-cfgcmd.txt  libconfuse-build-gitclone.cmake  libconfuse-build-gitupdate.cmake
build-arm/rpi-rgb-led-matrix-build-prefix/src/rpi-rgb-led-matrix-build-stamp/: rpi-rgb-led-matrix-build-gitinfo.txt
build-arm/rpi-rgb-led-matrix-build-prefix/tmp/: rpi-rgb-led-matrix-build-gitclone.cmake  rpi-rgb-led-matrix-build-gitupdate.cmake
cmake/: armv8-rpi3-linux-gnueabihf.cmake
debian/: changelog  control
obj-arm-linux-gnueabihf/rpi-rgb-led-matrix-prefix/tmp/: rpi-rgb-led-matrix-gitclone.cmake
src/: CMakeLists.txt  Makefile  clock_config.cc  clock_config.h  fclock.cc  fclock.conf  text_writer.cc  text_writer.h
